Coverity analysis defect 176694: Uninitialized pointer read

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer read

      Incorrect values could be read from, or even written to, an arbitrary memory location, causing incorrect computations. Reads an uninitialized pointer or its target
      /src/mongo/db/extension/host_adapter/aggregation_stage.cpp:55: UNINIT 176694 Declaring variable "logicalStagePtr" without initializer.

            Assignee:
            Santiago Roche
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: