SERVER-110875 Fix coverity issue, uninitialized logicalStagePtr. (#43887)

GitOrigin-RevId: 1df1ddcbfbb76d8c02dc3d08ee7b47ab99cb158e