src/mongo/db/extension/sdk/extension_operation_metrics_handle.h
@@ -57,7 +57,7 @@ public:
     BSONObj serialize() {
         assertValid();
 
-        ::MongoExtensionByteBuf* buf;
+        ::MongoExtensionByteBuf* buf{nullptr};
         auto* ptr = get();
 
         invokeCAndConvertStatusToException([&]() { return vtable().serialize(ptr, &buf); });
