src/mongo/db/extension/shared/handle/aggregation_stage/ast_node.cpp
@@ -35,7 +35,7 @@
 namespace mongo::extension {
 
 MongoExtensionStaticProperties AggStageAstNodeHandle::getProperties() const {
-    ::MongoExtensionByteBuf* buf;
+    ::MongoExtensionByteBuf* buf{nullptr};
     invokeCAndConvertStatusToException([&]() { return vtable().get_properties(get(), &buf); });
 
     tassert(
@@ -49,7 +49,7 @@ MongoExtensionStaticProperties AggStageAstNodeHandle::getProperties() const {
 }
 
 LogicalAggStageHandle AggStageAstNodeHandle::bind() const {
-    ::MongoExtensionLogicalAggStage* logicalStagePtr;
+    ::MongoExtensionLogicalAggStage* logicalStagePtr{nullptr};
 
     // The API's contract mandates that logicalStagePtr will only be allocated if status is OK.
     invokeCAndConvertStatusToException([&]() { return vtable().bind(get(), &logicalStagePtr); });
