src/mongo/db/extension/shared/handle/aggregation_stage/stage_descriptor.cpp
@@ -33,7 +33,7 @@
 namespace mongo::extension {
 
 AggStageParseNodeHandle AggStageDescriptorHandle::parse(BSONObj stageBson) const {
-    ::MongoExtensionAggStageParseNode* parseNodePtr;
+    ::MongoExtensionAggStageParseNode* parseNodePtr{nullptr};
     // The API's contract mandates that parseNodePtr will only be allocated if status is OK.
     invokeCAndConvertStatusToException(
         [&]() { return vtable().parse(get(), objAsByteView(stageBson), &parseNodePtr); });
